Fixed fraud_agent code

--- a/agent/test_agent.ipynb
+++ b/agent/test_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2a101493",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "sys.path.append(os.path.abspath(\"..\"))"
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "sys.path.append(\"..\")"
    ]
   },
   {
@@ -66,21 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8f4f668d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'fraud_rules.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrag\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mretriever\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m retrieve_rules\n\u001b[1;32m----> 2\u001b[0m \u001b[43mretrieve_rules\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\Github\\insurance-claims-ai\\rag\\retriever.py:2\u001b[0m, in \u001b[0;36mretrieve_rules\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mretrieve_rules\u001b[39m():\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfraud_rules.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m         rules \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m rules\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'fraud_rules.txt'"
-     ]
+     "data": {
+      "text/plain": [
+       "'Rule 1: Claims with multiple past claims are higher fraud risk.\\nRule 2: High vehicle price combined with no police report increases suspicion.\\nRule 3: Long delay between accident and claim increases fraud probability.\\nRule 4: Multiple supplements added to claim can indicate exaggeration.\\nRule 5: Young drivers with expensive cars have elevated fraud patterns.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -90,26 +89,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0e43272b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'fraud_rules.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43minvestigate_claim\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhigh_risk_claim\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(response)\n",
-      "File \u001b[1;32md:\\Github\\insurance-claims-ai\\agent\\fraud_agent.py:14\u001b[0m, in \u001b[0;36minvestigate_claim\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21minvestigate_claim\u001b[39m(data: \u001b[38;5;28mdict\u001b[39m):\n\u001b[0;32m     13\u001b[0m     prediction \u001b[38;5;241m=\u001b[39m predict_claim(data)\n\u001b[1;32m---> 14\u001b[0m     rules \u001b[38;5;241m=\u001b[39m \u001b[43mretrieve_rules\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m     prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;124m    You are an insurance fraud investigator.\u001b[39m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;124m    \u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;124m    3. Recommended Action\u001b[39m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;124m    \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m     34\u001b[0m     response \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m     35\u001b[0m         model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-40-mini\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     36\u001b[0m         messages\u001b[38;5;241m=\u001b[39m[{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: prompt}]\n\u001b[0;32m     37\u001b[0m     )\n",
-      "File \u001b[1;32md:\\Github\\insurance-claims-ai\\rag\\retriever.py:2\u001b[0m, in \u001b[0;36mretrieve_rules\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mretrieve_rules\u001b[39m():\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfraud_rules.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m         rules \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m rules\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'fraud_rules.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Risk Assessment\n",
+      "The claim presents a high fraud probability of **70.17%**, indicating significant risk based on the combination of factors involved. \n",
+      "\n",
+      "# Key Suspicious Factors\n",
+      "1. **Multiple Past Claims**: The claimant has between 4 to 8 past claims, which raises suspicion according to Rule 1.\n",
+      "2. **High Vehicle Price**: The vehicle is categorized as a sport and priced at more than $69,000, which aligns with Rule 2 regarding high vehicle price and lack of a police report.\n",
+      "3. **Delay in Claim Filing**: The claim was filed more than 30 days after the accident, contradicting expected timelines and suggesting possible fraud as per Rule 3.\n",
+      "4. **Number of Supplements**: Claim includes more than 5 supplements, which suggests potential exaggeration of damages (Rule 4).\n",
+      "5. **Young Driver with Expensive Car**: The policyholder is 23 years old, which, combined with the expensive vehicle, fits Rule 5 regarding elevated fraud risks.\n",
+      "\n",
+      "# Recommended Action\n",
+      "- **Investigate Further**: Conduct a deeper investigation into the claim's legitimacy, focusing on the reasons for the delay in claim filing and verifying the details of the accident.\n",
+      "- **Review History**: Analyze the claimant's previous claims and behavior to identify patterns or discrepancies.\n",
+      "- **Request Additional Documentation**: Gather more evidence to support the claim, including any medical records, detailed repair estimates, and statements from potential witnesses.\n",
+      "- **Monitor Future Claims**: Keep an eye on any future claims made by this policyholder for possible fraudulent activities.\n"
      ]
     }
    ],
    "source": [
     "response = investigate_claim(high_risk_claim)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "06d607e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_risk_claim = {\n",
+    "    \"Month\": \"Jun\",\n",
+    "    \"WeekOfMonth\": \"2\",\n",
+    "    \"DayOfWeek\": \"Tuesday\",\n",
+    "    \"Make\": \"Honda\",\n",
+    "    \"AccidentArea\": \"Rural\",\n",
+    "    \"DayOfWeekClaimed\": \"Tuesday\",\n",
+    "    \"MonthClaimed\": \"Jun\",\n",
+    "    \"WeekOfMonthClaimed\": \"2\",\n",
+    "    \"Sex\": \"Female\",\n",
+    "    \"MaritalStatus\": \"Married\",\n",
+    "    \"Age\": 45,\n",
+    "    \"Fault\": \"Third Party\",\n",
+    "    \"PolicyType\": \"Sedan - Liability\",\n",
+    "    \"VehicleCategory\": \"Sedan\",\n",
+    "    \"VehiclePrice\": \"20000 to 29000\",\n",
+    "    \"Deductible\": 500,\n",
+    "    \"DriverRating\": 4,\n",
+    "    \"Days_Policy_Accident\": \"none\",\n",
+    "    \"Days_Policy_Claim\": \"none\",\n",
+    "    \"PastNumberOfClaims\": \"none\",\n",
+    "    \"AgeOfVehicle\": \"2 years\",\n",
+    "    \"AgeOfPolicyHolder\": \"41 to 50\",\n",
+    "    \"PoliceReportFiled\": \"Yes\",\n",
+    "    \"WitnessPresent\": \"Yes\",\n",
+    "    \"AgentType\": \"Internal\",\n",
+    "    \"NumberOfSuppliments\": \"none\",\n",
+    "    \"NumberOfCars\": \"1 vehicle\",\n",
+    "    \"BasePolicy\": \"Liability\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bd514926",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Risk Assessment\n",
+      "\n",
+      "Based on the provided claim data and the model prediction of a fraud probability of **0.000175**, the overall risk for this claim appears to be low. The fraud knowledge base rules indicate potential risk factors; however, none of the factors from the provided data raise significant alarms.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "# Key Suspicious Factors\n",
+      "\n",
+      "1. **Past Claims**: The claimant has no past claims, which usually would lower the fraud risk; however, there is no data indicating a history that aligns with relevant rules.\n",
+      "2. **Vehicle Price**: The vehicle falls into the moderate price category ($20,000 to $29,000), but it is not exceptionally high, which minimizes suspicion.\n",
+      "3. **Police Report**: A police report was filed, which is generally a good sign and reduces suspicion.\n",
+      "4. **Supplements**: There are no supplements filed, which again lowers the chance of exaggeration.\n",
+      "5. **Age of Insured**: The insured is 45, which is not considered a high-risk age group for fraud.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "# Recommended Action\n",
+      "\n",
+      "- **Monitor for Future Claims**: While this claim poses a low risk at present, ongoing monitoring for any future claims made by this insured individual may be warranted.\n",
+      "- **Documentation Review**: Ensure that all documentation associated with the claim (police report, witness statements) is properly filed and reviewed.\n",
+      "- **Data Gathering**: Continue collecting data on this claimant and similar claims to build a more robust profile and identify any trends over time.\n",
+      "- **Regular Training**: Keep the fraud detection team informed and trained on updates to fraud patterns and knowledge to consistently improve their investigative skills.\n",
+      "\n",
+      "Overall, this claim appears legitimate based on the current data and risk assessment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = investigate_claim(low_risk_claim)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9aa2d6f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medium_risk_claim = {\n",
+    "    \"Month\": \"Sep\",\n",
+    "    \"WeekOfMonth\": \"3\",\n",
+    "    \"DayOfWeek\": \"Saturday\",\n",
+    "    \"Make\": \"Ford\",\n",
+    "    \"AccidentArea\": \"Urban\",\n",
+    "    \"DayOfWeekClaimed\": \"Sunday\",\n",
+    "    \"MonthClaimed\": \"Sep\",\n",
+    "    \"WeekOfMonthClaimed\": \"3\",\n",
+    "    \"Sex\": \"Male\",\n",
+    "    \"MaritalStatus\": \"Married\",\n",
+    "    \"Age\": 34,\n",
+    "    \"Fault\": \"Policy Holder\",\n",
+    "    \"PolicyType\": \"Utility - All Perils\",\n",
+    "    \"VehicleCategory\": \"Utility\",\n",
+    "    \"VehiclePrice\": \"30000 to 39000\",\n",
+    "    \"Deductible\": 400,\n",
+    "    \"DriverRating\": 2,\n",
+    "    \"Days_Policy_Accident\": \"15 to 30\",\n",
+    "    \"Days_Policy_Claim\": \"15 to 30\",\n",
+    "    \"PastNumberOfClaims\": \"1\",\n",
+    "    \"AgeOfVehicle\": \"3 years\",\n",
+    "    \"AgeOfPolicyHolder\": \"31 to 40\",\n",
+    "    \"PoliceReportFiled\": \"Yes\",\n",
+    "    \"WitnessPresent\": \"No\",\n",
+    "    \"AgentType\": \"External\",\n",
+    "    \"NumberOfSuppliments\": \"1 to 2\",\n",
+    "    \"NumberOfCars\": \"2 vehicles\",\n",
+    "    \"BasePolicy\": \"All Perils\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3eca21ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Risk Assessment\n",
+      "The model indicates a **Fraud Probability** of approximately **18.66%**. While this value is below the commonly accepted threshold for high suspicion (often around 20% or higher), several factors warrant a closer look due to their potential implications.\n",
+      "\n",
+      "# Key Suspicious Factors\n",
+      "1. **Past Claims**: The claimant has **1 past claim** on record. Although this is not multiple, it does contribute slightly to increased risk.\n",
+      "   \n",
+      "2. **Vehicle Price with Police Report**: The claim involves a **vehicle price range of $30,000 to $39,000** along with a **police report filed**. While the police report does reduce the suspicion, the higher vehicle price still maintains some level of risk.\n",
+      "\n",
+      "3. **Delay Between Accident and Claim**: The claim shows a delay of only **15 to 30 days** between the accident and the claim, which does not significantly elevate suspicion based on the established rules.\n",
+      "\n",
+      "4. **Number of Supplements**: The claim has **1 to 2 supplements** added, which can suggest potential exaggeration according to Rule 4.\n",
+      "\n",
+      "5. **Driver Demographics**: The policyholder is **34 years old**, categorized as **31 to 40 years** old, which does not align with the higher fraud risk typically associated with younger drivers.\n",
+      "\n",
+      "# Recommended Action\n",
+      "- **Further Investigation**: Given the factors noted, especially the number of supplements and the vehicle price, a more in-depth review of the claim is recommended. \n",
+      "- **Additional Documentation**: Request further documentation regarding the circumstances of the accident and any additional evidence that supports the claim. \n",
+      "- **Interview**: Consider conducting an interview with the claimant to clarify any discrepancies or to gather more information about the incident and claims filed. \n",
+      "- **Monitoring**: Place this claim under monitored status for potential future anomalies or patterns that may suggest fraudulent behavior.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = investigate_claim(medium_risk_claim)\n",
     "print(response)"
    ]
   }
